# Relationship-RHPG

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: rhpg.db  test_rhpg.db
rhpg/algorithms/: affinity.py  centrality.py  classifier.py  delta_score.py
rhpg/api/: dependencies.py  main.py
rhpg/api/routers/: analysis.py  candidates.py  dashboard.py  groups.py  relationships.py  visualization.py  workers.py
rhpg/graph/: builder.py  hypergraph.py  nx_graph.py
rhpg/models/: group.py  relationship.py  schemas.py  worker.py
rhpg/services/: fit_evaluator.py  worker_evaluator.py
rhpg/storage/: database.py  orm_models.py  repository.py  seed.py
rhpg/templates/: base.html  candidates.html  dashboard.html  groups.html  hypergraph.html  network.html  workers.html
rhpg/visualization/: hypergraph_plot.py  network_plot.py  performance_charts.py
tests/: conftest.py  test_algorithms.py  test_api.py  test_seed.py
